<?xml version="1.0"?>
<package format="3">
  <name>heuristic_planners</name>
  <version>0.4.3</version>
  <description>Heuristic planners package</description>

  <maintainer email="reyarcenegui@gmail.com">RafaelRey</maintainer>
  <maintainer email="chanjoon.park@kaist.ac.kr">Chanjoon Park</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>rosidl_typesupport_cpp</depend>
  <depend>rosidl_default_generators</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_msgs</depend>
  <depend>yaml-cpp</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
